--- a/src/Components/Foods/Foods.css
+++ b/src/Components/Foods/Foods.css
@@ -1,13 +1,13 @@
 .cardFood{
     cursor:pointer;
     
-    border: 1px solid lightgrey;
+    border: 1px solid burlywood;
 }
 
 .cardFood:hover{
-    -webkit-box-shadow: 3px -1px 17px 10px rgba(0,0,0,0.75);
-    -moz-box-shadow: 3px -1px 17px 10px rgba(0,0,0,0.75);
-    box-shadow: 3px -1px 17px 10px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 2px 10px 17px -1px rgba(0,0,0,0.75);
+    -moz-box-shadow: 2px 10px 17px -1px rgba(0,0,0,0.75);
+    box-shadow: 2px 10px 17px -1px rgba(0,0,0,0.75);
     background-color: burlywood;
    
 }
